<resources>
    <string name="app_name">Moodle Helper</string>
    <string name="action_settings">Setting</string>
    <string name="invalid_button">An invalid item has been clicked.</string>
    <string name="prompt_uid">Portal UID: </string>
    <string name="prompt_password">Portal PIN: </string>
    <string name="initial_uid">HKU Portal Login name</string>
    <string name="initial_pin">HKU Portal Login Password</string>
    <string name="initial_pin_unchanged">Portal PIN (Unchanged)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="click_to_course">Browse</string>
    <string name="prompt_enter_course_name">Course Name: </string>
    <string name="prompt_enter_course_url">Course url: </string>
    <string name="example_course_name">e.g. HKUH1005</string>
    <string name="example_course_url">e.g. https://moodle.hku.hk/php?id=133355</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_course">No courses have been set!</string>
    <string name="wrong_url">Some error in resolving the course URL.</string>
    <string name="delete_course_setting">Delete</string>
    <string name="download_prompt">Downloading file from Moodle</string>
    <string name="no_download_permission">Cannot download due to no download permission</string>
    <string name="file_save_to">File has been saved to: \n</string>
    <string name="prompt_course_title">Course Title:</string>
    <string name="example_course_title">e.g. Introduction to Campus Life</string>
    <string name="empty_course_title">DEFAULT COURSE TITLE</string>
    <string name="language">Language: English (Default)</string>
    <string name="language_hint">Same as system default</string>
    <string name="sync_button">Sync</string>
    <string name="currently_sync">Syncing…</string>
    <string name="load_failure">Load Failed</string>
    <string name="network_problem">Network not connected or network permission not granted!</string>
    <string name="sync_problem">The failure may be caused by incorrect UID or PIN or network disconnected</string>
    <string name="UID_PIN_problem">You did not enter your UID or PIN</string>
    <string name="major_courses">Major</string>
    <string name="minor_courses">Minor</string>
    <string name="cc_courses">Common Core</string>
    <string name="default_courses">Default</string>
    <string name="change_category">Switch Course Category</string>
    <string name="title_activity_drawer_root">Main View</string>
    <string name="menu_button_grade">My Grade</string>
    <string name="menu_button_setting">My Profile</string>
    <string name="menu_button_sync">Sync</string>
    <string name="menu_button_clear_all">Sign Out</string>
    <string name="menu_button_courses">My Courses</string>
    <string name="menu_group_function">Functions</string>
</resources>
