<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_courses"
            android:icon="@drawable/ic_menu_button_courses"
            android:title="@string/menu_button_courses"
            android:iconTint="@color/menu_button_tint"/>

        <item
            android:id="@+id/menu_item_profile"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_button_setting"
            android:iconTint="@color/menu_button_tint"/>

    </group>

    <item android:title="@string/menu_group_function">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_item_grade"
                    android:icon="@drawable/ic_menu_button_grade_24dp"
                    android:title="@string/menu_button_grade"
                    android:iconTint="@color/menu_button_tint"/>

                <item
                    android:id="@+id/menu_item_sync"
                    android:icon="@drawable/ic_menu_button_sync"
                    android:title="@string/menu_button_sync"
                    android:iconTint="@color/menu_button_tint"/>

                <item
                    android:id="@+id/menu_item_clear_all"
                    android:icon="@drawable/ic_menu_button_clear_all"
                    android:title="@string/menu_button_clear_all"
                    android:iconTint="@color/menu_button_tint"/>
            </group>
        </menu>
    </item>

</menu>