<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginStart="5dp"
        android:textSize="17sp"
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_enter_course_name" />

    <EditText
        android:layout_marginStart="10dp"
        android:id="@+id/edit_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="@string/prompt_enter_course_name"
        android:hint="@string/example_course_name"/>

    <TextView
        android:layout_marginStart="5dp"
        android:textSize="17sp"
        android:layout_marginTop="7dp"
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_enter_course_url" />

    <EditText
        android:layout_marginStart="10dp"
        android:id="@+id/edit_course_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:autofillHints="@string/prompt_enter_course_url"
        android:hint="@string/example_course_url"/>
</LinearLayout>