<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".graphic.SettingsFragment"
    android:id="@+id/root_setting_view">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsActivityToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/colorBackground"
            android:textFontWeight="800"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/enter_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        android:text="@string/prompt_uid"
        android:textColor="@color/colorText"
        android:textFontWeight="500"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsActivityToolBar" />

    <TextView
        android:id="@+id/enter_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        android:text="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_uid"
        android:textColor="@color/colorText"
        android:textFontWeight="500"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/uid_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/initial_uid"
        android:ems="7"
        android:hint="@string/initial_uid"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enter_uid"
        app:layout_constraintTop_toTopOf="@+id/enter_uid"
        app:layout_constraintBottom_toBottomOf="@+id/enter_uid" />

    <EditText
        android:id="@+id/pin_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="textPassword"
        android:autofillHints="@string/initial_pin"
        android:hint="@string/initial_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/enter_pin"
        app:layout_constraintTop_toTopOf="@id/enter_pin"
        app:layout_constraintBottom_toBottomOf="@id/enter_pin"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courses_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:paddingStart="5dp"
        android:paddingEnd="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:pressedTranslationZ="6dp"
        app:rippleColor="@color/colorPrimaryShadow"
        app:srcCompat="@drawable/ic_add_24dp" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:text="@string/language"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sync_button" />

    <TextView
        android:id="@+id/language_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/language_hint"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/language"
        app:layout_constraintTop_toBottomOf="@id/sync_button" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_button"
        app:layout_constraintStart_toEndOf="@id/enter_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_value"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/colorBackground"
        android:shadowDx="5.0"
        android:shadowDy="3.2"
        android:outlineAmbientShadowColor="@color/colorPrimaryShadow"/>


</androidx.constraintlayout.widget.ConstraintLayout>